open_source-rendu: Update

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.6||^10.2",
-        "symfony/dom-crawler": "^6.3"
+        "symfony/dom-crawler": "^6.3",
+        "symfony/css-selector": "^6.3"
     },
     "scripts": {
         "phpstan": "@php vendor/bin/phpstan analyze src --level=max",
